samples/_failures_safe/1761454514_495c45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41c5d280.c: In function ‘lex_string’:
./samples/SAFE/__tmp_41c5d280.c:152:45: error: ‘MAX’ undeclared (first use in this function)
  152 |             if (len >= MAX_TOKEN_LEN) len = MAX
      |                                             ^~~
./samples/SAFE/__tmp_41c5d280.c:152:45: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_41c5d280.c:152:48: error: expected ‘;’ at end of input
  152 |             if (len >= MAX_TOKEN_LEN) len = MAX
      |                                                ^
      |                                                ;
./samples/SAFE/__tmp_41c5d280.c:152:13: error: expected declaration or statement at end of input
  152 |             if (len >= MAX_TOKEN_LEN) len = MAX
      |             ^~
./samples/SAFE/__tmp_41c5d280.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41c5d280.c:152:13: error: expected declaration or statement at end of input
